@@ -54,6 +54,9 @@ templates_path = ['%(dot)stemplates']
 # The suffix of source filenames.
 source_suffix = '%(suffix)s'
 
+# The encoding of source files.
+#source_encoding = 'utf-8'
+
 # The master toctree document.
 master_doc = '%(master)s'
 
